--- a/deployment/digitalocean-app.yaml
+++ b/deployment/digitalocean-app.yaml
@@ -3,7 +3,7 @@ services:
 - name: mathbot-api
   source_dir: /
   github:
-    repo: YOUR_GITHUB_USERNAME/MathBot_Python
+    repo: Choeng-Rayu/MathBot_Python  # Update this with your actual GitHub username
     branch: main
     deploy_on_push: true
 
@@ -29,8 +29,8 @@ services:
   
   # HTTP configuration
   http_port: 8000
-  
-  # Environment variables (set these in DigitalOcean dashboard)
+
+  # Environment variables with actual values for immediate deployment
   envs:
   - key: ENVIRONMENT
     value: production
@@ -41,26 +41,23 @@ services:
   - key: LOG_LEVEL
     value: INFO
   - key: TELEGRAM_BOT_TOKEN
+    value: "7659640601:AAHvuGO4r1esUjG3HYqkdcKNsUlW2KjghR8"
     scope: RUN_TIME
-    type: SECRET
-  - key: WEBHOOK_URL
-    scope: RUN_TIME
-    type: SECRET
-  - key: WEBHOOK_SECRET
-    scope: RUN_TIME
-    type: SECRET
   - key: MONGODB_URI
+    value: "mongodb+srv://ChoengRayu:C9r6nhxOVLCUkkGd@cluster0.2ott03t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
     scope: RUN_TIME
-    type: SECRET
   - key: DEEPSEEK_API_KEY
+    value: "sk-698124ba5ed24bcea3c8d298b73f2f52"
     scope: RUN_TIME
-    type: SECRET
-  - key: GOOGLE_CLOUD_CREDENTIALS_JSON
+  - key: WEBHOOK_SECRET
+    value: "mathbot_webhook_secret_2025"
     scope: RUN_TIME
-    type: SECRET
   - key: SECRET_KEY
+    value: "mathbot_secret_key_2025_change_in_production"
     scope: RUN_TIME
-    type: SECRET
+  - key: ALLOWED_HOSTS
+    value: "*"
+    scope: RUN_TIME
 
 # Optional: Add a database if you want to use DigitalOcean Managed Database
 # databases:
